@@ -3,6 +3,7 @@
 	parents in case the toolbar is not visible.
 
 2006-12-01  Alex Roitman  <shura@gramps-project.org>
+	* src/plugins/Rebuild.py (__init__): Proper progress indication.
 	* src/ArgHandler.py (cl_action): Properly call CLI tool.
 	* src/plugins/DumpGenderStats.py (__init__): Fix CLI mode.
 	* src/PluginUtils/_Tool.py (cli_tool): Fix CLI tools.
